[gd_scene load_steps=7 format=2]

[ext_resource path="res://src/dialog/dialog_player.gd" type="Script" id=1]
[ext_resource path="res://src/dialog/registry.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/dialog/option.tscn" type="PackedScene" id=4]

[sub_resource type="StreamTexture" id=3]
load_path = "res://.import/base.png-b834a10a08168d3963f5101a757dccaa.stex"

[sub_resource type="Animation" id=1]
resource_name = "TextDisplay"
tracks/0/type = "value"
tracks/0/path = NodePath(".:percent_visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0 ]
}

[sub_resource type="Animation" id=2]
resource_name = "Blink"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("..:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.1, 1.1 ), Vector2( 1, 1 ) ]
}

[node name="Dialog_player" type="Node2D"]
script = ExtResource( 1 )

[node name="registry" parent="." instance=ExtResource( 2 )]

[node name="dialog_box" type="Control" parent="."]
visible = false
margin_right = 40.0
margin_bottom = 40.0

[node name="body_rect" type="NinePatchRect" parent="dialog_box"]
margin_top = 180.0
margin_right = 480.0
margin_bottom = 250.0
texture = SubResource( 3 )
patch_margin_left = 4
patch_margin_top = 4
patch_margin_right = 4
patch_margin_bottom = 4

[node name="player_rect" type="NinePatchRect" parent="dialog_box/body_rect"]
margin_left = 14.0
margin_top = -12.0
margin_right = 142.0
margin_bottom = 12.0
texture = SubResource( 3 )
patch_margin_left = 4
patch_margin_top = 4
patch_margin_right = 4
patch_margin_bottom = 4

[node name="texture" type="TextureRect" parent="dialog_box/body_rect/player_rect"]
margin_top = -128.0
margin_right = 128.0
expand = true

[node name="label" type="Label" parent="dialog_box/body_rect/player_rect"]
margin_right = 128.0
margin_bottom = 24.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Virgin"
align = 1
valign = 1
autowrap = true

[node name="npc_rect" type="NinePatchRect" parent="dialog_box/body_rect"]
margin_left = 338.0
margin_top = -12.0
margin_right = 466.0
margin_bottom = 12.0
texture = SubResource( 3 )
patch_margin_left = 4
patch_margin_top = 4
patch_margin_right = 4
patch_margin_bottom = 4

[node name="texture" type="TextureRect" parent="dialog_box/body_rect/npc_rect"]
margin_top = -128.0
margin_right = 128.0
expand = true

[node name="label" type="Label" parent="dialog_box/body_rect/npc_rect"]
margin_right = 128.0
margin_bottom = 24.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Chad"
align = 1
valign = 1
autowrap = true

[node name="label_container" type="MarginContainer" parent="dialog_box/body_rect"]
margin_left = 8.0
margin_top = 20.0
margin_right = 470.0
margin_bottom = 63.0

[node name="label" type="Label" parent="dialog_box/body_rect/label_container"]
margin_right = 462.0
margin_bottom = 43.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "The text is here"
autowrap = true
percent_visible = 0.0

[node name="animation" type="AnimationPlayer" parent="dialog_box/body_rect/label_container/label"]
anims/TextDisplay = SubResource( 1 )

[node name="confirm_container" type="MarginContainer" parent="dialog_box/body_rect"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -480.0
margin_top = 2.0
margin_bottom = 18.0
rect_scale = Vector2( 1.0603, 1.0603 )
rect_pivot_offset = Vector2( 240, 8 )

[node name="label" type="Label" parent="dialog_box/body_rect/confirm_container"]
margin_right = 480.0
margin_bottom = 16.0
text = "Press C to Continue"
align = 1
valign = 1

[node name="animation" type="AnimationPlayer" parent="dialog_box/body_rect/confirm_container"]
root_node = NodePath("../label")
autoplay = "Blink"
anims/Blink = SubResource( 2 )

[node name="option_list" type="VBoxContainer" parent="dialog_box/body_rect"]
margin_left = 168.0
margin_top = -81.0
margin_right = 312.0
margin_bottom = -9.0

[node name="option1" parent="dialog_box/body_rect/option_list" instance=ExtResource( 4 )]
margin_top = 0.0
margin_right = 144.0
margin_bottom = 21.0

[node name="option2" parent="dialog_box/body_rect/option_list" instance=ExtResource( 4 )]
margin_top = 25.0
margin_right = 144.0
margin_bottom = 46.0

[node name="option3" parent="dialog_box/body_rect/option_list" instance=ExtResource( 4 )]
margin_top = 50.0
margin_right = 144.0
margin_bottom = 72.0

[connection signal="animation_finished" from="dialog_box/body_rect/label_container/label/animation" to="." method="_on_body_animation_animation_finished"]
